# NAO_IndividualRace_2015

./: .gitignore  CMakeLists.txt  NaoMovement.cpp  NaoMovement.h  NaoVision.cpp  NaoVision.h  Prueba.txt  README.md  bumper.cpp  bumper.h  ignorar.txt  main.cpp  manifest.json  qiproject.xml
build-naoki-sdk1.14/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake  individualrace.cbp
build-naoki-sdk1.14/sdk/share/qi/: path.conf
build-naoqi64/: CMakeCache.txt  Makefile  cmake_install.cmake  wlkv2.cbp
build-naoqi64/sdk/share/qi/: path.conf
build-sys-linux-x86_64/: CMakeCache.txt
build-sys-linux-x86_64/sdk/share/qi/: path.conf
