cmake_minimum_required(VERSION 2.8)
project(individualrace)

find_package(qibuild)

# Create a executable named wlkv2
# with the source file: main.cpp
qi_create_bin(individualrace "main.cpp")

qi_use_lib(individualrace ALCOMMON ALPROXIES)
qi_use_lib(individualrace OPENCV2_CORE OPENCV2_HIGHGUI OPENCV2_IMGPROC OPENCV2_VIDEO)
